# busycrab

./: .gitignore  Cargo.toml  README.md  USAGE.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/motion/: clock.rs  crab.rs  mandelbrot.rs  matrix.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration_test.rs  mandelbrot_test.rs  matrix_test.rs  motion_test.rs  platform_test.rs  wokecrab_test.rs
