[package]
name = "busycrab"
version = "0.0.3"
edition = "2021"
description = "🦀 A Rust utility that prevents sleep and fakes activity to keep your status green."
license = "Apache-2.0"
repository = "https://github.com/guinetik/busycrab"

[dependencies]
enigo = "0.1.3"
clap = { version = "4.5", features = ["derive"] }
cfg-if = "1.0"
term_size = "0.3.2"
rand = "0.9.1"
ctrlc = "3.4.1"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc = "0.2"
